# bls12381rs

./: .gitignore  Makefile  README.md  go.mod  go.sum  map.go  map_test.go
map-rs/: Cargo.toml
map-rs/lib/: kyberrs.h
map-rs/src/: lib.rs
