[package]
name = "map-rs"
version = "0.1.0"
authors = ["nikkolasg"]
edition = "2018"

[lib]
name = "kyberrs"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.2", package = "fff" }
groupy = "0.3.0"
paired = "0.18.0"
rand_core = "0.5.1"
rand = "0.7"
libc = "0.2"
